# mini-dag-runner

./: .gitignore  Cargo.toml
src/: errors.rs  main.rs  state.rs
src/models/: dag.rs  events.rs  mod.rs
src/routes/: delete.rs  list.rs  mod.rs  status.rs  stream.rs  submit.rs
src/services/: executor.rs  mod.rs  scheduler.rs  store.rs
static/: index.html
static/css/: style.css
static/js/: app.js  templates.js
